--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -76,8 +76,8 @@ h5 {
   @apply font-satoshi ;
 }
 .heading_2 {
-  @apply text-[clamp(2rem,4vw,4rem)];
+  @apply text-[clamp(1.8rem,4vw,4rem)] leading-[clamp(2.2rem,4.5vw,4.8rem)];
 }
 .heading {
-  @apply text-[clamp(2rem,7vw,7.5rem)] tracking-tight font-bold;
+  @apply text-[clamp(2rem,7vw,7.5rem)] tracking-tight font-bold leading-[clamp(2.5rem,6vw,6.5rem)];
 }
